jwttoken config
